src/css/style.styl
@import 'nib'
@import 'rupture'
@import url('//fonts.googleapis.com/css?family=Inconsolata|Source+Sans+Pro:200,300,400')

rupture.scale = 0 35.5em 48em 64em 80em
rupture.anti-overlap = -0.5px
rupture.scale-names = 'sm' 'md' 'lg' 'xl' 'hd'

$orange = #f8b133
$darkorange = #f88933

.sans
  font-family 'Source Sans Pro', sans-serif
.monospace
  font-family 'Inconsolata', monospace
  
.pure-g [class *='pure-u'],
.pure-g-r [class*="pure-u"]
  @extends .sans
  
.pure-button
  @extends .sans
  appearance none
  background $orange
  border none
  box-shadow none
  border-radius 5px
  border 1px solid @background
  color #FFF
  padding 0.5em 1.1em 0.7em
  transition background 0.4s ease, border-color 0.4s ease, color 0.4s ease
  &:hover
    box-shadow none
    background darken(@background, 10%)
    border-color @background
  &:focus,
  &:active
    background-image none
    box-shadow none
  
  &.outline
    background none !important
    color #AAA
    &:hover
      color darken(@color, 10%)

  &.pure-button-primary
    background $darkorange
    border-color @background
    &:hover
      background darken(@background, 10%)
      border-color @background
    &.outline
      color @background
      &:hover
        color darken(@color, 10%)

  &.pure-button-negative
    background #fff
    color $darkorange
    &:hover
      background #fff
    &.outline
      color #FFF

  &.pure-button-small
    padding 0.2em 1em 0.4em
    i
      font-size 14px

  &.pure-button-block
    width 100%

  & + .pure-button
    margin-left 0.6em

  span
    text-transform uppercase
    font-size 0.9em
    font-weight 600
    
  i
    font-size 18px

  & > span,
  & > i,
  & > img
    display inline-block
    vertical-align middle
    & + span,
    & + i,
    & + img
      margin-left 10px
  
_align = 'left', 'center', 'right'
for _a in _align
  .text-{ _a }
    text-align unquote(_a)

_spacer = 5, 10, 20, 30, 40, 50, 60, 80, 100
for _s in _spacer
  .spacer-{ _s }
    height ( _s * 1px )

html,
body
  height 100%
  @extends .sans
  font-weight 300
  color #333
  
h1
  font-weight 200
h2,
h3
  font-weight 300
h4,
h5,
h6
  font-weight 400

strong
  font-weight 400

a
  color $darkorange
  text-decoration none
  
img
  display block
  margin 0 auto
  height auto
  
.padding
  padding 10px

.container
  margin 0 auto

nav
  .container
    width 960px
    max-width 100%
  a
    box-shadow none
    text-shadow none
    text-decoration none
    *
      display inline-block
      vertical-align middle
  img
    height 30px
    width auto
    margin 0

// -- terminal window from: https://codepen.io/jamesduncombe/pen/QNMapK
@keyframes pulse
  0%
    opacity 0
  50%
    opacity 1
  100%
    opacity 0

.terminal-window
  width 500px
  margin 0 auto 2rem
  border-radius 0 0 0.1rem 0.1rem
  text-align left

  .bar
    background #191919
    height 36px
    border-radius 0.5rem 0.5rem 0 0

  .btn,
  .btn:before,
  .btn:after
    width 12px
    height 12px
    border-radius 100%
    display block

  .btn
    background #f6b73e
    position relative
    margin-left 38px
    top 12px
    &:before,
    &:after
      content " "
      position absolute
    &:before
      background #f55551
      margin-left -20px
    &:after
      background #32c146
      margin-left 20px

  .body
    height 240px
    background #232323
    padding 18px
    pre
      @extends .monospace
      margin 0
      font-size 1em
      line-height 1.4rem
    .pulse
      animation pulse 1s ease-in-out infinite

  .command
    color $orange

  .comment
    opacity 0.5



#top
  background-color $darkorange
  background-image url('../img/polygonal-pattern.png')
  background-position center center
  background-size cover
  color #fff
  position relative
  a.github
    position absolute
    top 10px
    right 10px
    text-decoration none
    img
      display block
      width 32px
      height @width
  .container
    max-width 960px
    text-align center
  img.logo
    display block
    height 70px
    width auto
    margin 0 auto

#preview,
#readme,
footer
  .container
    width 760px
    max-width 100%
    
footer
  color #777
  a
    color #777
    
#preview
  p
    font-size 1.6em
    font-weight 300
    
  .for-me
    color darken(#95a5a6, 20%)
    h1
      font-style italic
        
    img
      margin 0 auto
      width 50px
      height @width

#readme
  font-weight 400
  h1
    position relative
    color $darkorange
    &:before
      content '\039B'
      color rgba($darkorange, 0.7)
      font-size 0.6em
      position absolute
      left -40px
      bottom .25em
  h2
    position relative
    color $orange
    &:before
      content '\03BB'
      color rgba($orange, 0.7)
      font-size 0.6em
      position absolute
      left -30px
      bottom .25em
      
  blockquote
    background rgba($orange, .15)
    color rgba($darkorange, .9)
    padding 10px 20px
    margin 0
    a
      text-decoration underline
    
  p + h2,
  pre + h1
    margin-top 50px

  hr
    border none
    height 1px
    background #eee
    margin-top 50px
    margin-bottom 50px
    
  img
    max-width 100%
    
  code
    @extends .monospace
    font-weight 400
    font-size .95em
    
+below('sm')
  .hide-mobile
    display none

  .terminal-window
    display none
    & + .spacer-50
      display none
  
  #top
    height auto
    .container
      position relative
      top auto
      left auto
      transform none
    img.logo
      height 50px
      width auto
    h1
      font-size 1.5em

